--- a/research_lab/public/css/landing_style.css
+++ b/research_lab/public/css/landing_style.css
@@ -12,49 +12,6 @@ body {
     color: #003366;
 }
 
-/* 네비게이션 바 */
-#navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.9); /* 반투명 흰색 */
-    padding: 15px 30px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.logo a {
-    color: #003366;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.logo-img {
-    max-height: 50px;
-    width: auto;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-}
-
-nav ul li {
-    margin-left: 20px;
-}
-
-nav ul li a {
-    color: #003366;
-    text-decoration: none;
-    font-size: 1em;
-    font-weight: bold;
-}
-
 /* 랜딩 페이지 */
 #landing {
     height: 100vh;
@@ -152,8 +109,9 @@ nav ul li a {
 }
 
 #map {
-    flex: 1;
-    height: 100%;
+    /* flex: 1; */
+    height: 75%;
+    width: 50%;
 }
 
 .location-info {
@@ -189,17 +147,6 @@ nav ul li a {
 }
 
 @media (max-width: 768px) {
-    #navbar {
-        flex-direction: column;
-        align-items: center;
-    }
-    nav ul {
-        flex-direction: column;
-        margin-top: 10px;
-    }
-    nav ul li {
-        margin: 10px 0;
-    }
     #landing h1 {
         font-size: 2.5em;
     }
