--- a/research_lab/public/css/landing_style.css
+++ b/research_lab/public/css/landing_style.css
@@ -80,32 +80,42 @@ body {
     display: flex;
     flex-direction: column;
     width: 80%;
+    text-align: center;
 }
 
 .awards-title h2 {
     font-weight: bold;
 }
 
-/* Location */
-.location-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+#location {
     height: 100vh;
-    background: white;
+}
+
+#location .row {
+    height: 100%;
+    margin-top: 5%;
+}
+
+.location-container {
+    height: 100%;
+    width: 100%;
+    justify-items: center;
+}
+
+.location-info-professor {
+    text-align: center;
+    justify-items: center;
+}
+
+.location-info-student {
+    text-align: center;
+    justify-items: center;
 }
 
 #map {
     height: 75%;
-    width: 50%;
-}
-
-.location-info {
-    flex: 1;
-    padding: 20px;
-    text-align: left;
+    width: 75%;
+    align-items: center;
 }
 
 /* 반응형 디자인 */
@@ -117,20 +127,9 @@ body {
         font-size: 1.2em;
     }
 
-    .location-container {
-        flex-direction: column;
-        height: auto;
-        padding: 5%;
-    }
-
     #map {
         width: 100%;
         height: 300px;
-    }
-
-    .location-info {
-        width: 100%;
-        text-align: center;
     }
 }
 
@@ -146,19 +145,9 @@ body {
         padding: 5%;
     }
 
-    .location-container {
-        flex-direction: column;
-        padding: 5%;
-    }
-
     #map {
         width: 100%;
         height: 250px;
-    }
-
-    .location-info {
-        width: 100%;
-        text-align: center;
     }
 
     .awards-contents {
