--- a/research_lab/public/css/landing_style.css
+++ b/research_lab/public/css/landing_style.css
@@ -94,28 +94,33 @@ body {
 #location .row {
     height: 100%;
     margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .location-container {
     height: 100%;
     width: 100%;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.location-info-professor {
-    text-align: center;
-    justify-items: center;
-}
-
+.location-info-professor,
 .location-info-student {
     text-align: center;
     justify-items: center;
+    width: 100%;
 }
 
+/* 기본 맵 크기 */
 #map {
     height: 75%;
     width: 75%;
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 /* 반응형 디자인 */
@@ -128,8 +133,13 @@ body {
     }
 
     #map {
-        width: 100%;
-        height: 300px;
+        height: 60%;
+        width: 80%;
+    }
+
+    .location-container {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -145,14 +155,29 @@ body {
         padding: 5%;
     }
 
-    #map {
-        width: 100%;
-        height: 250px;
-    }
-
     .awards-contents {
         width: 100%;
         padding: 5%;
+    }
+
+    #location .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .location-container {
+        width: 90%;
+        justify-content: center;
+    }
+
+    .location-info-professor,
+    .location-info-student {
+        width: 100%;
+    }
+
+    #map {
+        height: 50%;
+        width: 90%;
     }
 }
 
