--- a/research_lab/public/css/member_details.css
+++ b/research_lab/public/css/member_details.css
@@ -13,5 +13,55 @@ body {
 }
 
 .contents {
-    margin-top: 10%;
+    height: 100vh;
+    margin-top: 100px;
+}
+
+.profile {
+    justify-content: center;
+    justify-items: center;
+}
+
+.profile-box {
+    width: 75%;
+}
+
+.profile-box-img {
+    justify-items: center;
+    text-align: center;
+}
+
+.profile-box-img img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-box-name {
+    margin-top: 5%;
+    text-align: center;
+}
+
+.profile-box-contents {
+    text-align: center;
+}
+
+.profile-box-contents a {
+    text-decoration: none;
+    color: #003366;
+}
+
+.cv-contents {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cv-contents object {
+    height: 100%;
+    width: 100%;
+    border: none;
 }
