--- a/research_lab/public/css/members_style.css
+++ b/research_lab/public/css/members_style.css
@@ -51,11 +51,19 @@ body {
     text-align: center;
 }
 
-.member-card img {
-    width: 100px;
+.member-card picture {
     height: 100px;
-    border-radius: 50%;
+    width: 100px;
+    aspect-ratio: 1 / 1;
     object-fit: cover;
+}
+
+.member-card img {
+    height: 100px;
+    width: 100px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .member-card h4 {
